--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,17 @@ body {
 	display: flex;
 }
 
+.flex-col {
+	display: flex;
+	flex-direction: column;
+}
+
 .justify-around {
 	justify-content: space-around;
+}
+
+.justify-between {
+	justify-content: space-between;
 }
 
 .items-center {
@@ -35,12 +44,28 @@ body {
 	gap: 10px;
 }
 
+.gap-20 {
+	gap: 20px;
+}
+
 .p-5 {
 	padding: 5px;
 }
 
 .bg-dark {
 	background-color: var(--secondary-color);
+}
+
+.gap-50 {
+	gap: 50px;
+}
+
+.p-50 {
+	padding: 50px;
+}
+
+.wrap {
+	flex-wrap: wrap;
 }
 
 .navbar a,
@@ -60,4 +85,13 @@ body {
 	font-family: 'Playwrite CU', cursive;
 	font-optical-sizing: auto;
 	font-style: normal;
+}
+
+.product-card {
+	background-color: var(--primary-color);
+	width: 200px;
+	text-align: center;
+	padding: 15px 5px;
+	border: 2px solid var(--secondary-color);
+	border-radius: 10px;
 }
